Added XGBoost models

--- a/spooky-nlp/Notebooks/ensemble.ipynb
+++ b/spooky-nlp/Notebooks/ensemble.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,21 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "alg1_pred = pd.read_csv('../predictions/alg1.csv')\n",
-    "alg2_pred = pd.read_csv('../predictions/alg2.csv')\n",
-    "alg3_pred = pd.read_csv('../predictions/alg3.csv')\n",
-    "alg4_pred = pd.read_csv('../predictions/alg4.csv')\n",
-    "alg5_pred = pd.read_csv('../predictions/alg5.csv')\n",
-    "alg6_pred = pd.read_csv('../predictions/alg6.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +19,14 @@
     "lstm_pred = pd.read_csv('../predictions/lstm_predictions.csv')\n",
     "fast_pred = pd.read_csv('../predictions/fast_text_predictions.csv')\n",
     "clf_pred = pd.read_csv('../predictions/clf_predictions.csv')\n",
-    "early_pred = pd.read_csv('../predictions/early_predictions.csv')"
+    "early_pred = pd.read_csv('../predictions/early_predictions.csv')\n",
+    "xgb1_pred = pd.read_csv('../predictions/xgboost_pred.csv')\n",
+    "xgb2_pred = pd.read_csv('../predictions/xgboost2_pred.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +105,7 @@
        "4  id04081  0.688231  0.115644  0.209802"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +195,7 @@
        "4  id04081  0.802288  0.051065  0.146648"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +285,7 @@
        "4  id04081  0.955608  0.019530  0.024862"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +375,7 @@
        "4  id04081  0.978579  0.015000  6.420737e-03"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +465,7 @@
        "4  id04081  0.538227  0.208888  2.528852e-01"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,17 +476,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>EAP</th>\n",
+       "      <th>HPL</th>\n",
+       "      <th>MWS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>id02310</td>\n",
+       "      <td>0.020868</td>\n",
+       "      <td>0.001286</td>\n",
+       "      <td>0.977846</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>id24541</td>\n",
+       "      <td>0.999464</td>\n",
+       "      <td>0.000311</td>\n",
+       "      <td>0.000225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>id00134</td>\n",
+       "      <td>0.032166</td>\n",
+       "      <td>0.967338</td>\n",
+       "      <td>0.000495</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>id27757</td>\n",
+       "      <td>0.997486</td>\n",
+       "      <td>0.001252</td>\n",
+       "      <td>0.001262</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>id04081</td>\n",
+       "      <td>0.972237</td>\n",
+       "      <td>0.026245</td>\n",
+       "      <td>0.001518</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id       EAP       HPL       MWS\n",
+       "0  id02310  0.020868  0.001286  0.977846\n",
+       "1  id24541  0.999464  0.000311  0.000225\n",
+       "2  id00134  0.032166  0.967338  0.000495\n",
+       "3  id27757  0.997486  0.001252  0.001262\n",
+       "4  id04081  0.972237  0.026245  0.001518"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xgb1_pred.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>EAP</th>\n",
+       "      <th>HPL</th>\n",
+       "      <th>MWS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>id02310</td>\n",
+       "      <td>0.031252</td>\n",
+       "      <td>0.007071</td>\n",
+       "      <td>0.961677</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>id24541</td>\n",
+       "      <td>0.998636</td>\n",
+       "      <td>0.000810</td>\n",
+       "      <td>0.000555</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>id00134</td>\n",
+       "      <td>0.024428</td>\n",
+       "      <td>0.971831</td>\n",
+       "      <td>0.003741</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>id27757</td>\n",
+       "      <td>0.722790</td>\n",
+       "      <td>0.265629</td>\n",
+       "      <td>0.011581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>id04081</td>\n",
+       "      <td>0.931655</td>\n",
+       "      <td>0.035305</td>\n",
+       "      <td>0.033039</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id       EAP       HPL       MWS\n",
+       "0  id02310  0.031252  0.007071  0.961677\n",
+       "1  id24541  0.998636  0.000810  0.000555\n",
+       "2  id00134  0.024428  0.971831  0.003741\n",
+       "3  id27757  0.722790  0.265629  0.011581\n",
+       "4  id04081  0.931655  0.035305  0.033039"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xgb2_pred.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(8392, 4)\n",
-      "(8392, 4)\n",
-      "(8392, 4)\n",
-      "(8392, 4)\n",
       "(8392, 4)\n",
       "(8392, 4)\n",
       "(8392, 4)\n",
@@ -515,26 +679,22 @@
     "print(fast_pred.shape)\n",
     "print(clf_pred.shape)\n",
     "print(early_pred.shape)\n",
-    "print(alg1_pred.shape)\n",
-    "print(alg2_pred.shape)\n",
-    "print(alg3_pred.shape)\n",
-    "print(alg4_pred.shape)\n",
-    "print(alg5_pred.shape)\n",
-    "print(alg6_pred.shape)"
+    "print(xgb1_pred.shape)\n",
+    "print(xgb2_pred.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_pred = pd.concat((fast_pred, vw_pred, lstm_pred, clf_pred, early_pred, alg1_pred, alg2_pred, alg3_pred, alg4_pred, alg5_pred, alg6_pred))"
+    "all_pred = pd.concat((fast_pred, vw_pred, lstm_pred, clf_pred, early_pred, xgb2_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -579,37 +739,37 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>id00008</td>\n",
-       "      <td>0.926096</td>\n",
-       "      <td>0.040180</td>\n",
-       "      <td>0.034743</td>\n",
+       "      <td>0.993407</td>\n",
+       "      <td>0.005192</td>\n",
+       "      <td>0.003269</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>id00011</td>\n",
-       "      <td>0.085866</td>\n",
-       "      <td>0.899365</td>\n",
-       "      <td>0.018923</td>\n",
+       "      <td>0.018817</td>\n",
+       "      <td>0.975819</td>\n",
+       "      <td>0.012980</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>id00013</td>\n",
-       "      <td>0.115473</td>\n",
-       "      <td>0.848637</td>\n",
-       "      <td>0.044484</td>\n",
+       "      <td>0.052695</td>\n",
+       "      <td>0.958824</td>\n",
+       "      <td>0.004239</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>id00018</td>\n",
-       "      <td>0.266657</td>\n",
-       "      <td>0.543227</td>\n",
-       "      <td>0.170784</td>\n",
+       "      <td>0.390604</td>\n",
+       "      <td>0.482289</td>\n",
+       "      <td>0.091665</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>id00020</td>\n",
-       "      <td>0.057650</td>\n",
-       "      <td>0.917747</td>\n",
-       "      <td>0.024178</td>\n",
+       "      <td>0.003337</td>\n",
+       "      <td>0.993758</td>\n",
+       "      <td>0.002127</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -617,14 +777,14 @@
       ],
       "text/plain": [
        "        id       EAP       HPL       MWS\n",
-       "0  id00008  0.926096  0.040180  0.034743\n",
-       "1  id00011  0.085866  0.899365  0.018923\n",
-       "2  id00013  0.115473  0.848637  0.044484\n",
-       "3  id00018  0.266657  0.543227  0.170784\n",
-       "4  id00020  0.057650  0.917747  0.024178"
+       "0  id00008  0.993407  0.005192  0.003269\n",
+       "1  id00011  0.018817  0.975819  0.012980\n",
+       "2  id00013  0.052695  0.958824  0.004239\n",
+       "3  id00018  0.390604  0.482289  0.091665\n",
+       "4  id00020  0.003337  0.993758  0.002127"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,65 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>EAP</th>\n",
-       "      <th>HPL</th>\n",
-       "      <th>MWS</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>7356</th>\n",
-       "      <td>id24541</td>\n",
-       "      <td>0.886044</td>\n",
-       "      <td>0.077181</td>\n",
-       "      <td>0.036126</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           id       EAP       HPL       MWS\n",
-       "7356  id24541  0.886044  0.077181  0.036126"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "final_pred[final_pred['id'] == 'id24541']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
