Added data to Arima model

--- a/web_forecasting/notebooks/LSTM .ipynb
+++ b/web_forecasting/notebooks/LSTM .ipynb
@@ -6,7 +6,8 @@
    "metadata": {
     "_cell_guid": "276a68e1-8348-47ce-adb2-efc7d0c1d6ff",
     "_execution_state": "idle",
-    "_uuid": "59a9faa8133d47009a4300e5443da257e9c852e5"
+    "_uuid": "59a9faa8133d47009a4300e5443da257e9c852e5",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -2009,7 +2010,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
