Restructur directory and update watson api calls

--- a/kaggle/spooky-nlp/Notebooks/ensemble-best-models.ipynb
+++ b/kaggle/spooky-nlp/Notebooks/ensemble-best-models.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -11,8 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "combined_pred = pd.read_csv('../predictions/final_pred.csv')\n",
@@ -23,24 +27,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -553,7 +557,7 @@
        "[8392 rows x 4 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,24 +568,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -643,7 +647,7 @@
        "4  id04081  0.174431  0.645772  0.179797"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,24 +658,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -733,7 +737,7 @@
        "4  id04081  0.931655  0.035305  0.033039"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,24 +748,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -823,7 +827,7 @@
        "4  id04081  0.017727  0.015621  0.966651"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -857,17 +861,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_pred = pd.concat((combined_pred, short_pred, xgb2_pred, xgb3_pred))"
+    "all_pred = pd.concat((combined_pred, short_pred, xgb2_pred, xgb2_pred, xgb2_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "by_id_index = all_pred.groupby('id', as_index=False)\n",
@@ -877,24 +883,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -911,37 +917,37 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>id00008</td>\n",
-       "      <td>0.745562</td>\n",
-       "      <td>0.002867</td>\n",
-       "      <td>0.252039</td>\n",
+       "      <td>0.994242</td>\n",
+       "      <td>0.003443</td>\n",
+       "      <td>0.002689</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>id00011</td>\n",
-       "      <td>0.275358</td>\n",
-       "      <td>0.717672</td>\n",
-       "      <td>0.008874</td>\n",
+       "      <td>0.031351</td>\n",
+       "      <td>0.960769</td>\n",
+       "      <td>0.009403</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>id00013</td>\n",
-       "      <td>0.279370</td>\n",
-       "      <td>0.718569</td>\n",
-       "      <td>0.006000</td>\n",
+       "      <td>0.028412</td>\n",
+       "      <td>0.970148</td>\n",
+       "      <td>0.004592</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>id00018</td>\n",
-       "      <td>0.474440</td>\n",
-       "      <td>0.346180</td>\n",
-       "      <td>0.170520</td>\n",
+       "      <td>0.339413</td>\n",
+       "      <td>0.518808</td>\n",
+       "      <td>0.134692</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>id00020</td>\n",
-       "      <td>0.252913</td>\n",
-       "      <td>0.743990</td>\n",
-       "      <td>0.002903</td>\n",
+       "      <td>0.003623</td>\n",
+       "      <td>0.993911</td>\n",
+       "      <td>0.002310</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -949,14 +955,14 @@
       ],
       "text/plain": [
        "        id       EAP       HPL       MWS\n",
-       "0  id00008  0.745562  0.002867  0.252039\n",
-       "1  id00011  0.275358  0.717672  0.008874\n",
-       "2  id00013  0.279370  0.718569  0.006000\n",
-       "3  id00018  0.474440  0.346180  0.170520\n",
-       "4  id00020  0.252913  0.743990  0.002903"
+       "0  id00008  0.994242  0.003443  0.002689\n",
+       "1  id00011  0.031351  0.960769  0.009403\n",
+       "2  id00013  0.028412  0.970148  0.004592\n",
+       "3  id00018  0.339413  0.518808  0.134692\n",
+       "4  id00020  0.003623  0.993911  0.002310"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -967,8 +973,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "final_pred.to_csv('../predictions/more_final_pred.csv', index=False)"
