--- a/kaggle/spooky-nlp/Notebooks/simple_models.ipynb
+++ b/kaggle/spooky-nlp/Notebooks/simple_models.ipynb
@@ -31,29 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "_cell_guid": "d46ba3fd-26f1-4635-b2f9-fca916ff3066",
-    "_uuid": "21f3ccd962d1556dc2346699d45a29e9ef791367"
+    "_uuid": "21f3ccd962d1556dc2346699d45a29e9ef791367",
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/pcorr/anaconda3/envs/py36/lib/python3.6/site-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
-      "Using TensorFlow backend.\n",
-      "/Users/pcorr/anaconda3/envs/py36/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import xgboost as xgb\n",
-    "from tqdm import tqdm\n",
+    "# import xgboost as xgb\n",
+    "# from tqdm import tqdm\n",
     "from sklearn.svm import SVC\n",
     "from sklearn import preprocessing, decomposition, model_selection, metrics, pipeline\n",
     "from sklearn.model_selection import GridSearchCV\n",
@@ -62,9 +51,9 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
-    "from keras.layers import GlobalMaxPooling1D, Conv1D, MaxPooling1D, Flatten, Bidirectional, SpatialDropout1D\n",
-    "from keras.preprocessing import sequence, text\n",
-    "from keras.callbacks import EarlyStopping\n",
+    "# from keras.layers import GlobalMaxPooling1D, Conv1D, MaxPooling1D, Flatten, Bidirectional, SpatialDropout1D\n",
+    "# from keras.preprocessing import sequence, text\n",
+    "# from keras.callbacks import EarlyStopping\n",
     "from nltk import word_tokenize\n",
     "from nltk.corpus import stopwords\n",
     "stop_words = stopwords.words('english')"
@@ -82,10 +71,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "_cell_guid": "367e0329-7aeb-4f39-b1a9-d7395bdca993",
-    "_uuid": "d6ea63db0ad0db09b25c35601391b71564601699"
+    "_uuid": "d6ea63db0ad0db09b25c35601391b71564601699",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -106,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "_cell_guid": "1a9da2ba-2c8c-466d-8ceb-cb1fdb4351a8",
     "_uuid": "0fccc28ade4d126b5279d52b0f24300f8c18e69b"
@@ -116,17 +106,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -182,7 +172,7 @@
        "4  id12958  Finding nothing else, not even gold, the Super...    HPL"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "_cell_guid": "c1ec2ba0-7bac-4983-8f68-850f26251eb6",
     "_uuid": "6b2ace3ea08492e59402dc2abcf65b99ff1a537e"
@@ -203,17 +193,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -263,7 +253,7 @@
        "4  id04081  I am not sure to what limit his knowledge may ..."
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "_cell_guid": "a3d6737a-2e2b-4213-abf6-94dbefe3a660",
     "_uuid": "43a424c31b40cc7ba4b622fb915846ae00c1f3b7"
@@ -284,17 +274,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -356,7 +346,7 @@
        "4  id04081  0.403494  0.287808  0.308698"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,10 +369,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "_cell_guid": "deb46a3c-6170-4323-8fac-2710662ae0b9",
-    "_uuid": "62cd92e75f858aa7c97234e8267a64b00c6d04d0"
+    "_uuid": "62cd92e75f858aa7c97234e8267a64b00c6d04d0",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -416,10 +407,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
     "_cell_guid": "d59a646d-7739-496c-814f-594d371d76eb",
-    "_uuid": "19eb8c10f06df8e0f543ee12f794df5f88b0ff1a"
+    "_uuid": "19eb8c10f06df8e0f543ee12f794df5f88b0ff1a",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -439,10 +431,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {
     "_cell_guid": "ba8e606d-8dee-495e-8c3f-62aa916e9927",
-    "_uuid": "b45676b121e2b719d355619e24cfed13d0d33f74"
+    "_uuid": "b45676b121e2b719d355619e24cfed13d0d33f74",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -454,8 +447,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "xtest = test.text.values"
@@ -463,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "_cell_guid": "9e2fe6a9-8de0-4bbd-8264-f6b78e7993e2",
     "_uuid": "6c8659049537836fdf00d19d6d656630a306d217"
@@ -501,12 +496,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "_cell_guid": "b387f2af-11b1-455d-ad8d-320ed1005be3",
     "_uuid": "350d453dc982f494c3774dbdcf731d856546d611"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'xtrain' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-6f90c47716ef>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Fitting TF-IDF to both training and test sets (semi-supervised learning)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mtfv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxtrain\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxvalid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0mxtrain_tfv\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0mtfv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxtrain\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mxtest_tfv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtfv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxtest\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'xtrain' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Always start with these features. They work (almost) everytime!\n",
     "tfv = TfidfVectorizer(min_df=3,  max_features=None, \n",
@@ -550,7 +557,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "clf1_pred = clf.predict_proba(xtest_tfv)"
@@ -601,7 +610,8 @@
    "execution_count": 15,
    "metadata": {
     "_cell_guid": "7605227c-6cf5-4e00-bcf9-5781afdcc5ed",
-    "_uuid": "b464626583417155f1d746e44a2303f560506706"
+    "_uuid": "b464626583417155f1d746e44a2303f560506706",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -644,7 +654,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "clf2_pred = clf.predict_proba(xtest_ctv)"
@@ -693,7 +705,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "clf3_pred = clf.predict_proba(xtest_tfv)"
@@ -736,7 +750,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "clf4_pred = clf.predict_proba(xtest_ctv)\n"
@@ -761,7 +777,8 @@
    "execution_count": 22,
    "metadata": {
     "_cell_guid": "ae84d757-601f-4f7f-b53d-6d4f99ae7632",
-    "_uuid": "d055b28969acd7a93afbb7c51c187b74e539e01b"
+    "_uuid": "d055b28969acd7a93afbb7c51c187b74e539e01b",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -819,7 +836,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "svd1_pred = clf.predict_proba(xtest_svd_scl)"
@@ -867,7 +886,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "xg1_pred = clf.predict_proba(xtest_tfv.tocsc())"
@@ -897,7 +918,8 @@
    "execution_count": 27,
    "metadata": {
     "_cell_guid": "50a7703b-52e4-4057-8af7-0d0492f05450",
-    "_uuid": "7c3148c857c62662522fddd37d48642526f878da"
+    "_uuid": "7c3148c857c62662522fddd37d48642526f878da",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -919,7 +941,8 @@
    "execution_count": 28,
    "metadata": {
     "_cell_guid": "0fd480dd-71da-4efc-a8e0-cabc3ab75110",
-    "_uuid": "26404a6fbd2dbd045bd4af3fdc6317f6ca1f789f"
+    "_uuid": "26404a6fbd2dbd045bd4af3fdc6317f6ca1f789f",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -953,7 +976,8 @@
    "execution_count": 29,
    "metadata": {
     "_cell_guid": "0d935141-9595-4334-90e5-8ba00281d94c",
-    "_uuid": "b3704ca308ccf25b3ea169f923cb0e57cc66f2b6"
+    "_uuid": "b3704ca308ccf25b3ea169f923cb0e57cc66f2b6",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1099,7 +1123,8 @@
    "execution_count": null,
    "metadata": {
     "_cell_guid": "444bb821-e8ce-4efd-ab5c-cdb457a438a0",
-    "_uuid": "154fb55edb63f5d0c70471a27b2baaa3fa373efa"
+    "_uuid": "154fb55edb63f5d0c70471a27b2baaa3fa373efa",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1168,7 +1193,9 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def df_creator(predictions):\n",
@@ -1182,7 +1209,9 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pred_dfs = []\n",
@@ -1220,7 +1249,9 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "all_simple_pred = pd.concat(pred_dfs)"
@@ -1339,7 +1370,9 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "by_id_index = all_simple_pred.groupby('id', as_index=False)\n",
@@ -1459,7 +1492,9 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "simple_en_pred.to_csv('../predictions/simple_en_pred.csv', index=False)"
