--- a/sentiment-analysis/watson-api.ipynb
+++ b/sentiment-analysis/watson-api.ipynb
@@ -4,34 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### COMP41680 - Data Science in Python Assignment 1 - Philip Corr - 12318581\n",
-    "\n",
-    "#### Task 1: Choose a suitable project, API and data source\n",
-    "The aim of this data science project is to investigate the relationship between media publishers and the value of Sterling. Bloomberg and The Guardian were used in this case. The value of the sterling, at the time of release of the corresponding media, is also obtained through the Quandl API. IBM Watson's Discovery API provides access to the discovery news data set. This is a public data set which has been enriched with cognitive insights and is updated continuosly with 300,000 new articles added daily."
+    "## Watson API"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'watson_developer_cloud'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-bc5a6588c57f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mwatson_developer_cloud\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mquandl\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'watson_developer_cloud'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys,pprint\n",
     "import os\n",
     "import json\n",
-    "import watson_developer_cloud\n",
+    "from watson_developer_cloud import NaturalLanguageUnderstandingV1\n",
+    "from watson_developer_cloud.natural_language_understanding_v1 \\\n",
+    "  import Features, EntitiesOptions, KeywordsOptions\n",
     "import quandl\n",
     "import config\n",
     "import pandas as pd\n",
@@ -43,15 +30,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### API keys are required for accessing both the watson discovery api and Quandl api"
+    "#### API keys are required for accessing the watson discovery api"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Watson can only return a maximum of 50 queries at a time\n",
@@ -59,22 +44,12 @@
     "watson_count = 50\n",
     "\n",
     "# Files names to store data\n",
-    "financial_file_name = \"sterling_to_euro.csv\"\n",
-    "watson_hosts_file_name = \"watson_hosts.json\"\n",
-    "watson_general_file_name = \"watson_general.json\"\n",
-    "watson_pretty_hosts_file_name = \"watson_hosts_pretty.json\"\n",
-    "watson_pretty_general_file_name = \"watson_general_pretty.json\"\n",
+    "watson_general_file_name = \"watson.json\"\n",
     "\n",
-    "# Media publishers to be used\n",
-    "hosts = ['www.theguardian.com','www.bloomberg.com']\n",
-    "\n",
-    "# Set up API Access\n",
-    "quandl.ApiConfig.api_key =  config.QUANDL_KEY\n",
-    "discovery = watson_developer_cloud.DiscoveryV1(\n",
-    "    username=config.WATSON_USERNAME,\n",
-    "    password=config.WATSON_PASSWORD,\n",
-    "    version=config.WATSON_VERSION\n",
-    ")\n"
+    "natural_language_understanding = NaturalLanguageUnderstandingV1(\n",
+    "  username='c20a3acf-015e-4d42-8151-02056d8ca2c0',\n",
+    "  password=\"OOvV5jIkyNHP\",\n",
+    "  version='2018-03-16')"
    ]
   },
   {
@@ -86,40 +61,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"usage\": {\n",
+      "    \"text_units\": 1,\n",
+      "    \"text_characters\": 140,\n",
+      "    \"features\": 2\n",
+      "  },\n",
+      "  \"language\": \"en\",\n",
+      "  \"keywords\": [\n",
+      "    {\n",
+      "      \"text\": \"American multinational technology\",\n",
+      "      \"sentiment\": {\n",
+      "        \"score\": 0.0,\n",
+      "        \"label\": \"neutral\"\n",
+      "      },\n",
+      "      \"relevance\": 0.993518,\n",
+      "      \"emotion\": {\n",
+      "        \"sadness\": 0.085259,\n",
+      "        \"joy\": 0.026169,\n",
+      "        \"fear\": 0.02454,\n",
+      "        \"disgust\": 0.088711,\n",
+      "        \"anger\": 0.033078\n",
+      "      }\n",
+      "    },\n",
+      "    {\n",
+      "      \"text\": \"New York\",\n",
+      "      \"sentiment\": {\n",
+      "        \"score\": 0.0,\n",
+      "        \"label\": \"neutral\"\n",
+      "      },\n",
+      "      \"relevance\": 0.613816,\n",
+      "      \"emotion\": {\n",
+      "        \"sadness\": 0.166741,\n",
+      "        \"joy\": 0.228903,\n",
+      "        \"fear\": 0.057987,\n",
+      "        \"disgust\": 0.050965,\n",
+      "        \"anger\": 0.054653\n",
+      "      }\n",
+      "    }\n",
+      "  ],\n",
+      "  \"entities\": [\n",
+      "    {\n",
+      "      \"type\": \"Company\",\n",
+      "      \"text\": \"IBM\",\n",
+      "      \"sentiment\": {\n",
+      "        \"score\": 0.0,\n",
+      "        \"label\": \"neutral\"\n",
+      "      },\n",
+      "      \"relevance\": 0.33,\n",
+      "      \"emotion\": {\n",
+      "        \"sadness\": 0.085259,\n",
+      "        \"joy\": 0.026169,\n",
+      "        \"fear\": 0.02454,\n",
+      "        \"disgust\": 0.088711,\n",
+      "        \"anger\": 0.033078\n",
+      "      },\n",
+      "      \"disambiguation\": {\n",
+      "        \"subtype\": [\n",
+      "          \"SoftwareLicense\",\n",
+      "          \"OperatingSystemDeveloper\",\n",
+      "          \"ProcessorManufacturer\",\n",
+      "          \"SoftwareDeveloper\",\n",
+      "          \"CompanyFounder\",\n",
+      "          \"ProgrammingLanguageDesigner\",\n",
+      "          \"ProgrammingLanguageDeveloper\"\n",
+      "        ],\n",
+      "        \"name\": \"IBM\",\n",
+      "        \"dbpedia_resource\": \"http://dbpedia.org/resource/IBM\"\n",
+      "      },\n",
+      "      \"count\": 1\n",
+      "    }\n",
+      "  ]\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = natural_language_understanding.analyze(\n",
+    "  text='IBM is an American multinational technology company '\n",
+    "       'headquartered in Armonk, New York, United States, '\n",
+    "       'with operations in over 170 countries.',\n",
+    "  features=Features(\n",
+    "    entities=EntitiesOptions(\n",
+    "      emotion=True,\n",
+    "      sentiment=True,\n",
+    "      limit=2),\n",
+    "    keywords=KeywordsOptions(\n",
+    "      emotion=True,\n",
+    "      sentiment=True,\n",
+    "      limit=2)))\n",
+    "\n",
+    "print(json.dumps(response, indent=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Query Quandl for Sterling Value\n",
-    "def get_financial_data():\n",
-    "    # Get data for past 3 months\n",
-    "    data = quandl.get(\"BOE/XUDLSER\", start_date=\"2017-2-2\", end_date=\"2017-4-5\")\n",
-    "    # print(\"Financial Data:\")\n",
-    "    # print(type(data))\n",
-    "    # print(data)\n",
-    "    return (data)\n",
-    "\n",
-    "# Write Sterling values to file\n",
-    "def write_financial_data(file_name, data):\n",
-    "    # with takes care of closing file in python\n",
-    "    with open(file_name, 'w') as outfile:\n",
-    "        data.to_csv(outfile)\n",
-    "    outfile.close()\n",
-    "\n",
     "# Write Watson responses to JSON file\n",
     "def write_watson_data(file_name, data):\n",
     "    with open(file_name, 'w') as outfile:\n",
     "        outfile.write(json.dumps(data, outfile))\n",
-    "        # Use this to write dictionaries\n",
-    "        # seperate into responses returned from watson\n",
-    "        # for response in data:\n",
-    "        #     # Each response from watson contains 50 results\n",
-    "        #     for result in response['results']:\n",
-    "        #         outfile.write(json.dumps(result, outfile))\n",
-    "        #         outfile.write('\\n')\n",
-    "    # python closes file at end of function scope but no harm in being explicit\n",
     "    outfile.close()\n",
     "\n",
     "# Output Watson responses in readable JSON format\n",
@@ -216,80 +269,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n"
+     "ename": "AttributeError",
+     "evalue": "'DiscoveryV1' object has no attribute 'get_environments'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-084e4f7734ed>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# get Watson Data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mwatson_host_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_watson_query\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muse_hosts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mwatson_general_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_watson_query\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muse_hosts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-4-7c2c556e94fc>\u001b[0m in \u001b[0;36mcreate_watson_query\u001b[0;34m(use_hosts)\u001b[0m\n\u001b[1;32m     59\u001b[0m                 \u001b[0;31m# Filter specifies what sections to return\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m                 \u001b[0mfilter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'publicationDate,entities.sentiment,entities.text,blekko.snippet,blekko.host'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 61\u001b[0;31m                 \u001b[0mwatson_response\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mget_watson_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwatson_index\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwatson_count\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     62\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m                 \u001b[0;31m# add results to total response\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-4-7c2c556e94fc>\u001b[0m in \u001b[0;36mget_watson_data\u001b[0;34m(query, filter, watson_index, watson_count)\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mget_watson_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwatson_index\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwatson_count\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0;31m# get environment for this service instance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m     \u001b[0menvironments\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdiscovery\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_environments\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m     \u001b[0;31m# pp.pprint(environments)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'DiscoveryV1' object has no attribute 'get_environments'"
      ]
     }
    ],
    "source": [
-    "# get financial data\n",
-    "financial_data = get_financial_data()\n",
-    "\n",
     "# get Watson Data\n",
     "watson_host_data = create_watson_query(use_hosts = True)\n",
     "watson_general_data = create_watson_query(use_hosts = False)\n"
